<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Favorite"
    android:padding="20dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tlFavoritos"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:inputType="textUri"
        android:hint="@string/txtUrl"
        android:textSize="20sp"/>

    <WebView
        android:id="@+id/vw"
        android:layout_width="match_parent"
        android:layout_height="181dp" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:inputType="text"
        android:hint="@string/txtNombre"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtContenido"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtContenido"
        android:inputType="textMultiLine"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        android:onClick="guardar"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultar"
        android:onClick="listar"/>

</LinearLayout>